// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HL7v2 parser > does not run preprocessors when option is an empty array 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "1
OBX",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "2",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
      ],
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > handles leading double field delimiters as two empty leading fields 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "A",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
      ],
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > parses a segment ending with a field delimiter 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "1",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
      ],
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > parses a segment ending with multiple field delimiters 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "1",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
      ],
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > parses a segment ending with multiple field delimiters and segment carriage return 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "1",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
      ],
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > parses a segment ending with two field delimiters and preserves the last empty field 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "1",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
      ],
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > parses a single segment with two fields 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "1",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
      ],
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > preserves trailing component delimiter by creating an empty component 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "A",
                    },
                  ],
                  "type": "component",
                },
                {
                  "children": [],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
      ],
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > runs custom preprocessors 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "1",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "DEF",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
      ],
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > runs default preprocessors 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "1",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "ABC",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
      ],
      "type": "segment",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "NK1",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "2",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "subcomponent",
                      "value": "ABC",
                    },
                  ],
                  "type": "component",
                },
              ],
              "type": "field-repetition",
            },
          ],
          "type": "field",
        },
      ],
      "type": "segment",
    },
  ],
  "type": "root",
}
`;
